# i-boot-review

./: CHANGE-NOTES  COPYING  Makefile  Makefile.org  README  README.md  RELEASE-NOTES  decrypt.c  encrypted  note.md
build-i-boot-cerf-board-pxa250/: Makefile  config.cache  config.status  conftest  libtool
build-i-boot-cerf-board-pxa250/include/: Makefile
build-i-boot-cerf-board-pxa250/libs/: Makefile
build-i-boot-cerf-board-pxa250/libs/base/: Makefile
build-i-boot-cerf-board-pxa250/libs/base/.deps/: cpu.P  eeprom_24lc64.P  ethernet_smsc91c111.P  flash_i128.P  help.P  i2c_xscale.P  idle.P  os.P  params.P  pcmcia.P  serial.P  serial_xscale.P  timer_xscale.P
build-i-boot-cerf-board-pxa250/libs/net/: Makefile
build-i-boot-cerf-board-pxa250/libs/tools/: Makefile
build-i-boot-cerf-board-pxa250/libs/tools/.deps/: cebootme.P  cedecode.P  crc16.P  memtest.P  messages.P  parser.P  platform.P  string.P  ui.P  util.P  uudecode.P  xmodem.P
build-i-boot-cerf-board-pxa250/main/: Makefile  i_boot_elf
build-i-boot-cerf-board-pxa250/main/.deps/: c_main.P
documentation/: EEPROM  INSTALL  LAYOUT  USAGE
feed/: Packages  i-boot-cerf-board-pxa250_1.7_arm.ipk
i-boot-lite/: i-boot-cerf-board-pxa250_1.7-lite.img
images/: i-boot-cerf-board-pxa250_1.7-lite.img  images.sfv
src/: Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
src/include/: Makefile.in  arp.h  bootp.h  c_main.h  cebootme.h  cedecode.h  checksum.h  config.h  cpu.h  crc16.h  debug.h  dhcp.h  eeprom.h  eeprom_24lc64.h  ethernet.h  ethernet_cs8900a.h  ethernet_smsc91c111.h  fis.h  flash_i128.h  help.h  i2c_boot.h  i2c_xscale.h  icmp.h  idle.h  ip.h  memtest.h  messages.h  net.h  netapi.h  nvconfig.h  os.h  params.h  parser.h  pcmcia.h  platform.h  serial.h  start_sa.h  start_xscale.h  string.h  tftp.h  (+7 more)
src/ipkg-templates/: control  postinst  rules
src/ldscripts/: ld-cerfboard  ld-cerfpda  ld-xscale
src/libs/: Makefile.am  Makefile.in
src/libs/base/: Makefile.am  Makefile.in  Makefile.in.old  cpu.c  eeprom.c  eeprom_24lc64.c  ethernet_cs8900a.c  ethernet_smsc91c111.c  flash_i128.c  help.c  i2c_xscale.c  idle.c  nvconfig.c  os.c  params.c  pcmcia.c  serial.c  serial_sa.c  serial_xscale.c  timer_sa.c  timer_xscale.c
src/libs/net/: Makefile.am  Makefile.in  arp.c  bootp.c  checksum.c  dhcp.c  icmp.c  ip.c  netapi.c  tftp.c  udp.c
src/libs/tools/: Makefile.am  Makefile.in  cebootme.c  cedecode.c  crc16.c  memtest.c  messages.c  parser.c  platform.c  string.c  ui.c  util.c  uudecode.c  xmodem.c
src/main/: Makefile.am  Makefile.in  c_main.c  start_sa.S  start_xscale.S
