##### Add additional distribution files here!
EXTRA_DIST = 

lib_LIBRARIES = libnet.a

##### Add additional include directories here!
INCLUDES = -I@LOCAL_INC_DIR@ -I@KERNEL_INC_DIR@

##### Add the source files to be build here!
libnet_a_SOURCES = arp.c bootp.c checksum.c dhcp.c icmp.c ip.c netapi.c tftp.c udp.c
