##### Add additional distribution files here!
EXTRA_DIST = 

lib_LIBRARIES = libtools.a

##### Add additional include directories here!
INCLUDES = -I@LOCAL_INC_DIR@ -I@KERNEL_INC_DIR@

##### Add the source files to be build here!
libtools_a_SOURCES = \
                     cebootme.c \
                     cedecode.c \
                     crc16.c \
                     memtest.c \
                     messages.c \
                     parser.c \
                     platform.c \
                     string.c \
                     ui.c \
                     util.c \
                     uudecode.c \
                     xmodem.c
